# ErisPulse-NCMusicBot

./: .gitignore  README.md  main.py
music-bot/: .gitignore  pyproject.toml
music-bot/musicbot/: module.py
