[project]
name = "ErisPulse-MusicBot"
version = "1.0.0"
description = "基于ErisPulse SDK + YunhuAdapter 的音乐机器人"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "MusicBot", email = "dev@example.com" } ]
dependencies = [
  "ErisPulse>=2.3.0",
  "ErisPulse-YunhuAdapter",
  "aiohttp>=3.8.0",
  "ffmpeg-python>=0.2.0",
  "Pillow>=10.0.0"
]

[project.entry-points."erispulse.module"]
MusicBot = "musicbot.module:Main"

[tool.setuptools]
packages = ["musicbot"]

[tool.setuptools.package-dir]
"" = "."
